# Athar

./: .gitignore  CLAUDE.md  README.md  engine.py  enrichment.py  pyproject.toml  requirements.txt  usn_parser.py
athar/: __init__.py
athar/correlation/: __init__.py  rules.py
athar/models/: __init__.py  base.py  evtx.py  mft.py  prefetch.py  usn.py
athar/output/: __init__.py  csv_exporter.py  json_exporter.py
athar/parsers/: __init__.py  evtx_parser.py  prefetch_parser.py
tests/: __init__.py  test_usn.py
